incluindo readme, database.sql e alguns ajustes
