# app/route/general_routes.js
@@ -4,7 +4,13 @@ const login = require("../controller/login_controller")
 
 module.exports = (server) => {
     server.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-    server.post('/login', login.login)
+    server.post('/login', login.login,
+            /*
+        #swagger.tags = ['Login']
+        #swagger.summary = 'Fazer login'
+        #swagger.description = 'Fazer login para ter acesso as outras funcionalidades, será necessário pegar o token para as demais funcionalidades'
+        */ 
+    )
 
 }
 
